default/objects/Carnet_Unit__c/Carnet_Unit__c.object-meta.xml
<CustomObject>
    <description>Custom object for Carnet Unit orders.</description>
    <label>Carnet Unit</label>
    <nameField>
        <displayFormat>CU-{000000}</displayFormat>
        <label>Carnet Unit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carnet Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>