default/objects/Carnet_Unit__c/fields/Account_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Account_Price_Book__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please select Price Book under Opportunity. To select this under Opportunity, you need to have Price Book added under your Account.</inlineHelpText>
    <label>Account Price Book</label>
    <referenceTo>Account_Price_Book__c</referenceTo>
    <relationshipLabel>Carnet Units</relationshipLabel>
    <relationshipName>Carnet_Units</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>