default/objects/Carnet_Unit__c/fields/Activation_Installation_Price__c.field-meta.xml
<CustomField>
    <fullName>Activation_Installation_Price__c</fullName>
    <description>Used for calculating One-time Payment - Services (Price for Activation/Installation only - Carnet 85).</description>
    <formula>(Unit_Activation__c + Installation__c) * Number_of_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation/Installation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>