default/objects/Carnet_Unit__c/fields/Archiving__c.field-meta.xml
<CustomField>
    <fullName>Archiving__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Additional data archiving (12 months).</inlineHelpText>
    <label>Archiving</label>
    <type>Checkbox</type>
</CustomField>