default/objects/Carnet_Unit__c/fields/Archiving_Price__c.field-meta.xml
<CustomField>
    <fullName>Archiving_Price__c</fullName>
    <inlineHelpText>[vehicle / month]</inlineHelpText>
    <label>Archiving Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>