default/objects/Carnet_Unit__c/fields/Carnet_Tariff__c.field-meta.xml
<CustomField>
    <fullName>Carnet_Tariff__c</fullName>
    <inlineHelpText>Monthly flat fee for services FLEETCOR Carnet in Poland, include rental SIM card, data transmission (communication fees) and background maps.</inlineHelpText>
    <label>Carnet Tariff</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard 12</fullName>
            </value>
            <value>
                <fullName>Standard 24</fullName>
            </value>
            <value>
                <fullName>Standard 36</fullName>
            </value>
            <value>
                <fullName>Premium 24</fullName>
            </value>
            <value>
                <fullName>Premium 36</fullName>
            </value>
            <value>
                <fullName>Prepaid 12</fullName>
            </value>
            <value>
                <fullName>Prepaid 24</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>