default/objects/Carnet_Unit__c/fields/Carnet_Tariff_Price__c.field-meta.xml
<CustomField>
    <fullName>Carnet_Tariff_Price__c</fullName>
    <inlineHelpText>[monthly / unit]</inlineHelpText>
    <label>Carnet Tariff Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>