default/objects/Carnet_Unit__c/fields/Carnet_Tariff_Price_DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>Carnet_Tariff_Price_DISCOUNT__c</fullName>
    <label>Carnet Tariff Price (DISCOUNT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>