default/objects/Carnet_Unit__c/fields/Contract_length__c.field-meta.xml
<CustomField>
    <fullName>Contract_length__c</fullName>
    <description>Translate Contract term into numbers.</description>
    <formula>CASE(Contract_term__c, &quot;12 months&quot;,
12, &quot;24 months&quot;, 24, &quot;36 months&quot;, 36,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>