default/objects/Carnet_Unit__c/fields/Contract_term__c.field-meta.xml
<CustomField>
    <fullName>Contract_term__c</fullName>
    <inlineHelpText>Contract length. Drives selection of Tariff.</inlineHelpText>
    <label>Contract term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>24 months</fullName>
            </value>
            <value>
                <fullName>36 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>