default/objects/Carnet_Unit__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <formula>IF(Contains(TEXT(Carnet_Tariff__c), &quot;Standard 12&quot;), -(Opportunity__r.Sales_Basic_Monthly_Fee_Discount__c * Account_Price_Book__r.Price_Book__r.Standard_12__c), 
IF(Contains(TEXT(Carnet_Tariff__c), &quot;Standard 24&quot;), -(Opportunity__r.Sales_Basic_Monthly_Fee_Discount__c * Account_Price_Book__r.Price_Book__r.Standard_24__c), 
IF(Contains(TEXT(Carnet_Tariff__c), &quot;Prepaid 12&quot;), -(Opportunity__r.Sales_Basic_Monthly_Fee_Discount__c * Account_Price_Book__r.Price_Book__r.Prepaid_12__c), 
IF(Contains(TEXT(Carnet_Tariff__c), &quot;Prepaid 24&quot;), -(Opportunity__r.Sales_Basic_Monthly_Fee_Discount__c * Account_Price_Book__r.Price_Book__r.Prepaid_24__c),
IF(Contains(TEXT(Carnet_Tariff__c), &quot;Standard 36&quot;), -(Opportunity__r.Sales_Basic_Monthly_Fee_Discount__c * Account_Price_Book__r.Price_Book__r.Standard_36__c), 
NULL)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>