default/objects/Carnet_Unit__c/fields/Discount_FALSE__c.field-meta.xml
<CustomField>
    <fullName>Discount_FALSE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount FALSE</label>
    <type>Checkbox</type>
</CustomField>