default/objects/Carnet_Unit__c/fields/Discount_TRUE__c.field-meta.xml
<CustomField>
    <fullName>Discount_TRUE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount TRUE</label>
    <type>Checkbox</type>
</CustomField>