default/objects/Carnet_Unit__c/fields/Driving_Style__c.field-meta.xml
<CustomField>
    <fullName>Driving_Style__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Analysis and recommendations on driving styles and local receiving speed limits.</inlineHelpText>
    <label>Driving Style</label>
    <type>Checkbox</type>
</CustomField>