default/objects/Carnet_Unit__c/fields/Driving_Style_Price__c.field-meta.xml
<CustomField>
    <fullName>Driving_Style_Price__c</fullName>
    <inlineHelpText>[vehicle/month]</inlineHelpText>
    <label>Driving Style Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>