default/objects/Carnet_Unit__c/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <inlineHelpText>[one-time fee / unit]</inlineHelpText>
    <label>Installation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>