default/objects/Carnet_Unit__c/fields/Monitoring_in_EU__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_in_EU__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Monitoring in European Union. Drives the tariff selection.</inlineHelpText>
    <label>Tariff EU</label>
    <type>Checkbox</type>
</CustomField>