default/objects/Carnet_Unit__c/fields/Monitoring_in_EU_Price__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_in_EU_Price__c</fullName>
    <label>Tariff EU Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>