default/objects/Carnet_Unit__c/fields/Monitoring_in_other_European_countries__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_in_other_European_countries__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tariff Europe - Enabling of the monitoring in all other Europe countries outside EU.</inlineHelpText>
    <label>Tariff Europe</label>
    <type>Checkbox</type>
</CustomField>