default/objects/Carnet_Unit__c/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <inlineHelpText>Select the number of units with this settings.</inlineHelpText>
    <label>Number of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>