default/objects/Carnet_Unit__c/fields/On_line_position_above_standard__c.field-meta.xml
<CustomField>
    <fullName>On_line_position_above_standard__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Additional tracking of the vehicle&#39;s position (more than 1x per minute).</inlineHelpText>
    <label>On-line position above standard</label>
    <type>Checkbox</type>
</CustomField>