default/objects/Carnet_Unit__c/fields/On_line_position_above_standard_Price__c.field-meta.xml
<CustomField>
    <fullName>On_line_position_above_standard_Price__c</fullName>
    <inlineHelpText>[vehicle / month]</inlineHelpText>
    <label>On-line position above standard Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>