default/objects/Carnet_Unit__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Carnet Units</relationshipLabel>
    <relationshipName>Carnet_Units</relationshipName>
    <type>Lookup</type>
</CustomField>