default/objects/Carnet_Unit__c/fields/Price_Modified__c.field-meta.xml
<CustomField>
    <fullName>Price_Modified__c</fullName>
    <description>Was the price of Carnet Unit modified?</description>
    <formula>false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Was the price of Carnet Unit modified?</inlineHelpText>
    <label>Price Modified</label>
    <type>Checkbox</type>
</CustomField>