default/objects/Carnet_Unit__c/fields/Pricing_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Approval_Status__c</fullName>
    <description>Status of Approval on Carnet Unit records.</description>
    <inlineHelpText>Status of Approval on Carnet Unit records.</inlineHelpText>
    <label>Pricing Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
                <default>true</default>
                <label>Not required</label>
            </value>
            <value>
                <fullName>Approval Required</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>