default/objects/Carnet_Unit__c/fields/Reservations__c.field-meta.xml
<CustomField>
    <fullName>Reservations__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reservation and approval module in the online Carnet app.</inlineHelpText>
    <label>Reservations</label>
    <type>Checkbox</type>
</CustomField>