default/objects/Carnet_Unit__c/fields/RFID_TEST_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>RFID_TEST_AMOUNT__c</fullName>
    <label>RFID_TEST_AMOUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>