default/objects/Carnet_Unit__c/fields/RFID_TEST_PRICE__c.field-meta.xml
<CustomField>
    <fullName>RFID_TEST_PRICE__c</fullName>
    <description>TEST ONLY</description>
    <inlineHelpText>TEST ONLY</inlineHelpText>
    <label>RFID_TEST_PRICE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>