default/objects/Carnet_Unit__c/fields/Service_Alarm__c.field-meta.xml
<CustomField>
    <fullName>Service_Alarm__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Service of guarding the vehicle - sending SMS in case of unauthorized use.</inlineHelpText>
    <label>Service Alarm</label>
    <type>Checkbox</type>
</CustomField>