default/objects/Carnet_Unit__c/fields/Service_Alarm_Price__c.field-meta.xml
<CustomField>
    <fullName>Service_Alarm_Price__c</fullName>
    <inlineHelpText>[vehicle / month]</inlineHelpText>
    <label>Service Alarm Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>