default/objects/Carnet_Unit__c/fields/Standard_Carnet_Tariff__c.field-meta.xml
<CustomField>
    <fullName>Standard_Carnet_Tariff__c</fullName>
    <formula>IF(
OR(
Carnet_Tariff_Price__c = Price_Book__r.Standard_12__c,
Carnet_Tariff_Price__c = Price_Book__r.Standard_24__c,
Carnet_Tariff_Price__c = Price_Book__r.Standard_36__c,
Carnet_Tariff_Price__c = Price_Book__r.Prepaid_12__c,
Carnet_Tariff_Price__c = Price_Book__r.Prepaid_24__c),
True,
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Carnet Tariff</label>
    <type>Checkbox</type>
</CustomField>