default/objects/Carnet_Unit__c/fields/Standard_Unit_Package2__c.field-meta.xml
<CustomField>
    <fullName>Standard_Unit_Package2__c</fullName>
    <formula>IF(
Standard_Unit_Package__c = Standard_Unit_Package3__c,
True,
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Unit Package</label>
    <type>Checkbox</type>
</CustomField>