default/objects/Carnet_Unit__c/fields/Standard_Unit_Package3__c.field-meta.xml
<CustomField>
    <fullName>Standard_Unit_Package3__c</fullName>
    <inlineHelpText>Price for 1-5 Units.</inlineHelpText>
    <label>Standard_Unit_Package</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>