default/objects/Carnet_Unit__c/fields/Standard_Unit_Package_16_c__c.field-meta.xml
<CustomField>
    <fullName>Standard_Unit_Package_16_c__c</fullName>
    <inlineHelpText>Price for 16+ Units.</inlineHelpText>
    <label>Standard_Unit_Package_16__c</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>