default/objects/Carnet_Unit__c/fields/Standard_Unit_Package_6_15_c__c.field-meta.xml
<CustomField>
    <fullName>Standard_Unit_Package_6_15_c__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Price for 6-15 Units.</inlineHelpText>
    <label>Standard_Unit_Package_6_15__c</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>