default/objects/Carnet_Unit__c/fields/Standard_Unit_Package__c.field-meta.xml
<CustomField>
    <fullName>Standard_Unit_Package__c</fullName>
    <inlineHelpText>[one-time fee / unit]</inlineHelpText>
    <label>Standard Unit Package Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>