default/objects/Carnet_Unit__c/fields/Tariff_World_Price__c.field-meta.xml
<CustomField>
    <fullName>Tariff_World_Price__c</fullName>
    <inlineHelpText>[vehicle / month]</inlineHelpText>
    <label>Tariff Europe Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>