default/objects/Carnet_Unit__c/fields/Total_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Amount__c</fullName>
    <formula>(Discount_Amount__c) * Number_of_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>