default/objects/Carnet_Unit__c/fields/Total_Monthly_Payment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Payment_Fee__c</fullName>
    <formula>IF(
Discount_FALSE__c = True,
Carnet_Tariff_Price__c *  Number_of_Units__c,
Carnet_Tariff_Price_DISCOUNT__c * Number_of_Units__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Carnet Tariff Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>