default/objects/Carnet_Unit__c/fields/Total_One_time_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_One_time_Payment__c</fullName>
    <formula>IF(Prepaid__c = True, 
     (Standard_Unit_Package__c +  Unit_Activation__c +  Installation__c +  Carnet_Tariff_Price_DISCOUNT__c) 
        *  Number_of_Units__c + 
     IF(Monitoring_in_EU__c = TRUE, Monitoring_in_EU_Price__c * Contract_length__c * Number_of_Units__c, 0) +
     IF(Driving_Style__c = TRUE, Driving_Style_Price__c * Contract_length__c * Number_of_Units__c, 0) +
     IF(Reservations__c = TRUE, Reservations_Price__c * Contract_length__c * Number_of_Units__c, 0) +
     IF(Archiving__c = TRUE, Archiving_Price__c * Contract_length__c * Number_of_Units__c, 0) +
     IF(On_line_position_above_standard__c = TRUE, On_line_position_above_standard_Price__c * 
        Contract_length__c * Number_of_Units__c, 0) +
     IF(Web_services__c = TRUE, Web_services_Price__c * Contract_length__c * Number_of_Units__c, 0) +
     IF(Service_Alarm__c = TRUE, Service_Alarm_Price__c * Contract_length__c * Number_of_Units__c, 0) +
     IF(Monitoring_in_other_European_countries__c = TRUE, Tariff_World_Price__c * Contract_length__c * Number_of_Units__c, 0),
IF(Prepaid__c = False, (Standard_Unit_Package__c +  Unit_Activation__c +  Installation__c) *  Number_of_Units__c,
NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total One-time Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>