default/objects/Carnet_Unit__c/fields/Total_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Price__c</fullName>
    <description>Used for calculating One-time Payment - Goods (Price for Unit only + Additional HW).</description>
    <formula>(Standard_Unit_Package__c *  Number_of_Units__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>