default/objects/Carnet_Unit__c/fields/Unit_Activation__c.field-meta.xml
<CustomField>
    <fullName>Unit_Activation__c</fullName>
    <inlineHelpText>[one-time fee / unit]</inlineHelpText>
    <label>Unit Activation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>