default/objects/Carnet_Unit__c/fields/Unit_Package_Price_Paid_monthly_FALS__c.field-meta.xml
<CustomField>
    <fullName>Unit_Package_Price_Paid_monthly_FALS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Package Price - Paid monthly - FALS</label>
    <type>Checkbox</type>
</CustomField>