default/objects/Carnet_Unit__c/fields/Unit_Package_Price_Paid_monthly_TRUE__c.field-meta.xml
<CustomField>
    <fullName>Unit_Package_Price_Paid_monthly_TRUE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Package Price - Paid monthly - TRUE</label>
    <type>Checkbox</type>
</CustomField>