default/objects/Carnet_Unit__c/fields/Web_services__c.field-meta.xml
<CustomField>
    <fullName>Web_services__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Transmission of information via web services - data exchange.</inlineHelpText>
    <label>Web services</label>
    <type>Checkbox</type>
</CustomField>