default/objects/Carnet_Unit__c/recordTypes/Carnet_OBD.recordType-meta.xml
<RecordType>
    <fullName>Carnet_OBD</fullName>
    <active>true</active>
    <description>Record Type for Carnet OBD orders.</description>
    <label>Carnet OBD</label>
</RecordType>