default/objects/Carnet_Unit__c/recordTypes/Carnet_Standard.recordType-meta.xml
<RecordType>
    <fullName>Carnet_Standard</fullName>
    <active>true</active>
    <description>Record Type for Carnet Standard orders.</description>
    <label>Carnet Standard</label>
</RecordType>