default/objects/Carnet_Unit__c/validationRules/Lock_Account_Price_Book.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Account_Price_Book</fullName>
    <active>true</active>
    <description>Users can&#39;t change Account Price Book after choosing one.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(PRIORVALUE(Account_Price_Book__c))),
ISCHANGED(Account_Price_Book__c),
NOT(ISNEW())
)</errorConditionFormula>
    <errorDisplayField>Account_Price_Book__c</errorDisplayField>
    <errorMessage>You cannot change Account Price Book on Carnet Unit once it has been assigned.</errorMessage>
</ValidationRule>