default/objects/Carnet_Unit__c/validationRules/Lock_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Opportunity</fullName>
    <active>true</active>
    <description>Users can&#39;t change Opportunity after choosing one.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(PRIORVALUE(Opportunity__c))),
ISCHANGED(Opportunity__c),
NOT(ISNEW())
)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>You cannot change Opportunity on Carnet Unit once it has been assigned.</errorMessage>
</ValidationRule>