default/objects/Carnet_Unit__c/validationRules/Number_of_Units_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Units_positive</fullName>
    <active>true</active>
    <description>Number of Units must be bigger than 0.</description>
    <errorConditionFormula>Number_of_Units__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Number_of_Units__c</errorDisplayField>
    <errorMessage>Number of Units must be positive and bigger than 0.</errorMessage>
</ValidationRule>